# phrasey

./: .gitignore  Cargo.toml  config.example.toml  config.toml  config.toml.example  db.csv
src/: app.rs  config.rs  engine.rs  event.rs  main.rs  renderer.rs  types.rs  utils.rs
src/engine/: app.rs  app_state.rs  game.rs
src/engine/app_state/: game_state.rs  main_menu_state.rs  quit_state.rs  settings_state.rs  state_transition.rs
src/event/: event.rs  event_dispatcher.rs
src/events/: event.rs  event_catcher.rs  event_dispatcher.rs
src/utils/: args.rs  config.rs  database.rs  logging.rs
