[package]
name = "phrasey"
version = "0.1.0"
description = "Simple app to learn new phrases in foreign tongue."
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive"] }
config = "0.15.19"
crossterm = "0.29.0"
csv = "1.4.0"
env_logger = "0.11"
log = "0.4.29"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
